# django-imagedeck

./: .coveragerc  LICENSE  MANIFEST.in  README.md  makemigrations.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: testing.yml
docs/: Makefile  conf.py  index.rst  installation.rst
imagedeck/: __init__.py  admin.py  apps.py  models.py  settings.py  urls.py  util.py  views.py
imagedeck/management/commands/: imagedeck_combine.py  imagedeck_generate.py  imagedeck_glob.py  makethumbnails.py
imagedeck/migrations/: 0001_initial.py  0002_auto_20201102_1443.py  0003_deckbase_images.py  0004_auto_20201102_1538.py  0005_auto_20201102_1555.py  0006_deckmembership_primary.py  0007_auto_20201103_0931.py  0008_deckimagefiler.py  0009_auto_20201122_2300.py  0010_deckiiif.py  0011_auto_20210901_1642.py
imagedeck/templatetags/: imagedeck.py
tests/: models.py  settings.py  test_models.py  test_settings.py  tests.py  views.py
