[tool.poetry]
name = "django-imagedeck"
version = "0.4.0"
description = "A package to seamlessly group different sorts of images into groups."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rbturnbull/django-imagedeck"
packages = [
    { include = "imagedeck" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Django = ">=3.1.0"
django-imagekit = ">=4.0.2"
django-polymorphic = ">=3.0.0"
easy-thumbnails = ">=2.7.1"
django-filer = ">=2.0.2"
requests = ">=2.26.0"
iiif-prezi = ">=0.3.0"
django-mptt = "^0.16.0"
setuptools = "^75.8.0"
django-admin-sortable2 = "^2.2.4"

[tool.poetry.group.dev.dependencies]
pytest-django = ">=4.9.0"
coverage = ">=5.5"
black = ">=21.9b0"

[tool.pytest.ini_options]
minversion = "6.0"
django_find_project = true
DJANGO_SETTINGS_MODULE = "tests.settings"


[build-system]
requires = ["setuptools >= 40.6.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
